fix: specs arams & data verification
